# icloudpdlp

./: .gitignore  BUILD_UPLOAD.md  LICENSE  pyproject.toml  readme.md
.github/: copilot-instructions.md
src/icloudpdlp/: __init__.py  __main__.py  cli.py
src/icloudpdp/: __main__.py  cli.py
tests/: __init__.py  test_cli.py
